--- a/HTML/index.html
+++ b/HTML/index.html
@@ -521,7 +521,7 @@
             <div class="gallery">
                 <div class="card scroll-pop" onclick="showPage('photoshop')">
                     <div class="media-wrapper">
-                        <img src="https://uploads.onecompiler.io/44aguhurz/44agtytrj/BadmintonPosterV3.jpg" alt="Poster">
+                        <img src="BadmintonPosterV3.jpg" alt="Poster">
                     </div>
                     <div class="card-info">
                         <h3>Latest Design</h3>
@@ -563,7 +563,7 @@
             <div class="featured-project scroll-pop">
                 <div class="card">
                     <div class="media-wrapper">
-                        <img src="https://uploads.onecompiler.io/44aguhurz/44agtytrj/BadmintonPosterV3.jpg" alt="Main Photoshop Project">
+                        <img src="BadmintonPosterV3.jpg" alt="Main Photoshop Project">
                     </div>
                     
                     <div class="palette-container">
@@ -587,7 +587,7 @@
             <div class="split-grid">
                 <div class="card scroll-pop">
                     <div class="media-wrapper">
-                        <img src="https://uploads.onecompiler.io/44aguhurz/44agtytrj/BadmintonPosterV2.jpg" alt="Sub Project 1" style="width: 75%; height: auto; margin: 0 auto; display:block;">
+                        <img src="BadmintonPosterV2.jpg" alt="Sub Project 1" style="width: 75%; height: auto; margin: 0 auto; display:block;">
                     </div>
                     <div class="card-info">
                         <h3>V2</h3>
@@ -595,7 +595,7 @@
                 </div>
                 <div class="card scroll-pop">
                     <div class="media-wrapper">
-                        <img src="https://uploads.onecompiler.io/44aguhurz/44agtytrj/BadmintonPosterV1.jpg" alt="Sub Project 2" style="width: 75%; height: auto; margin: 0 auto; display:block;">
+                        <img src="BadmintonPosterV1.jpg" alt="Sub Project 2" style="width: 75%; height: auto; margin: 0 auto; display:block;">
                     </div>
                     <div class="card-info">
                         <h3>V1</h3>
@@ -652,7 +652,7 @@
             <div class="gallery">
                 <div class="card scroll-pop">
                     <div class="media-wrapper">
-                        <img src="https://uploads.onecompiler.io/44aguhurz/44agtytrj/Background.png" alt="Illustrator Work 1">
+                        <img src="Background.png" alt="Illustrator Work 1">
                     </div>
                     <div class="card-info">
                         <h3>Vector Art</h3>
@@ -661,7 +661,7 @@
                 </div>
                 <div class="card scroll-pop">
                     <div class="media-wrapper">
-                        <img src="https://uploads.onecompiler.io/44aguhurz/44agtytrj/Chips.png" alt="Illustrator Work 2">
+                        <img src="Chips.png" alt="Illustrator Work 2">
                     </div>
                     <div class="card-info">
                         <h3>Logo Design</h3>
@@ -797,4 +797,5 @@
         });
     </script>
 </body>
+
 </html>
